--- a/app/src/main/res/layout/fragment_navigation_tgxthemes.xml
+++ b/app/src/main/res/layout/fragment_navigation_tgxthemes.xml
@@ -46,7 +46,7 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/cardView3"
                 android:layout_width="match_parent"
-                android:layout_height="190dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="16dp"
@@ -69,6 +69,8 @@
                         android:layout_height="95dp"
                         android:layout_marginStart="16dp"
                         android:layout_marginLeft="16dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
                         android:foreground="?android:attr/selectableItemBackground"
                         android:onClick="openInvertedX"
                         app:cardBackgroundColor="@android:color/transparent"
@@ -76,7 +78,8 @@
                         app:cardElevation="0dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/cardView13"
-                        app:layout_constraintStart_toStartOf="parent">
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/cardViewButton6">
 
                         <android.support.constraint.ConstraintLayout
                             android:layout_width="match_parent"
@@ -123,8 +126,10 @@
                         android:id="@+id/cardView13"
                         android:layout_width="70dp"
                         android:layout_height="95dp"
+                        android:layout_marginTop="8dp"
                         android:layout_marginEnd="16dp"
                         android:layout_marginRight="16dp"
+                        android:layout_marginBottom="8dp"
                         android:foreground="?android:attr/selectableItemBackground"
                         android:onClick="openJamX"
                         app:cardBackgroundColor="@android:color/transparent"
@@ -132,7 +137,8 @@
                         app:cardElevation="0dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/cardView15">
+                        app:layout_constraintStart_toEndOf="@+id/cardView15"
+                        app:layout_constraintTop_toBottomOf="@+id/cardViewButton8">
 
                         <android.support.constraint.ConstraintLayout
                             android:layout_width="match_parent"
@@ -175,6 +181,7 @@
                         android:id="@+id/cardViewButton8"
                         android:layout_width="70dp"
                         android:layout_height="95dp"
+                        android:layout_marginTop="8dp"
                         android:layout_marginEnd="16dp"
                         android:layout_marginRight="16dp"
                         android:foreground="?android:attr/selectableItemBackground"
@@ -228,6 +235,7 @@
                         android:id="@+id/cardViewButton7"
                         android:layout_width="70dp"
                         android:layout_height="95dp"
+                        android:layout_marginTop="8dp"
                         android:foreground="?android:attr/selectableItemBackground"
                         android:onClick="openPixelBlueX"
                         android:visibility="visible"
@@ -281,6 +289,7 @@
                         android:layout_height="95dp"
                         android:layout_marginStart="16dp"
                         android:layout_marginLeft="16dp"
+                        android:layout_marginTop="8dp"
                         android:foreground="?android:attr/selectableItemBackground"
                         android:onClick="openInfernoX"
                         android:visibility="visible"
@@ -337,7 +346,7 @@
                 android:layout_height="39dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:fontFamily="@font/timeburnernormal"
@@ -346,21 +355,7 @@
                 android:textSize="26sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cardView6" />
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/cardView6"
-                android:layout_width="0dp"
-                android:layout_height="2dp"
-                android:layout_marginTop="8dp"
-                app:cardBackgroundColor="#6b6b6b"
-                app:cardCornerRadius="0dp"
-                app:cardElevation="0dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-            </android.support.v7.widget.CardView>
+                app:layout_constraintTop_toTopOf="parent" />
 
         </android.support.constraint.ConstraintLayout>
 
