--- a/app/src/main/res/layout/fragment_autumn.xml
+++ b/app/src/main/res/layout/fragment_autumn.xml
@@ -174,7 +174,7 @@
                         app:layout_constraintEnd_toStartOf="@+id/textView15"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView14"
-                        app:srcCompat="@drawable/ic_square_au" />
+                        app:srcCompat="@drawable/ic_lens_au" />
 
                     <ImageView
                         android:id="@+id/imageView6"
@@ -192,7 +192,7 @@
                         app:layout_constraintEnd_toEndOf="@+id/textView14"
                         app:layout_constraintStart_toStartOf="@+id/textView14"
                         app:layout_constraintTop_toBottomOf="@+id/textView14"
-                        app:srcCompat="@drawable/ic_square_league" />
+                        app:srcCompat="@drawable/ic_lens_league" />
 
                     <ImageView
                         android:id="@+id/imageView7"
@@ -210,7 +210,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/textView15"
                         app:layout_constraintTop_toBottomOf="@+id/cardView6"
-                        app:srcCompat="@drawable/ic_square_orange" />
+                        app:srcCompat="@drawable/ic_lens_orange" />
 
                     <TextView
                         android:id="@+id/textView22"
