--- a/app/src/main/res/layout/fragment_cyanogen.xml
+++ b/app/src/main/res/layout/fragment_cyanogen.xml
@@ -175,7 +175,7 @@
                         app:layout_constraintEnd_toStartOf="@+id/imageView7"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView14"
-                        app:srcCompat="@drawable/ic_square_oxygen" />
+                        app:srcCompat="@drawable/ic_lens_oxygen" />
 
                     <ImageView
                         android:id="@+id/imageView7"
@@ -193,7 +193,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/imageView6"
                         app:layout_constraintTop_toBottomOf="@+id/cardView6"
-                        app:srcCompat="@drawable/ic_square_pixel" />
+                        app:srcCompat="@drawable/ic_lens_pixel" />
 
                     <TextView
                         android:id="@+id/textView15"
