--- a/app/src/main/res/layout/fragment_inverted.xml
+++ b/app/src/main/res/layout/fragment_inverted.xml
@@ -127,7 +127,7 @@
 
             <android.support.v7.widget.CardView
                 android:id="@+id/cardView5"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="110dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginLeft="20dp"
@@ -148,11 +148,11 @@
                         android:id="@+id/textView14"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginLeft="16dp"
+                        android:layout_marginStart="32dp"
+                        android:layout_marginLeft="32dp"
                         android:layout_marginTop="8dp"
-                        android:layout_marginEnd="16dp"
-                        android:layout_marginRight="16dp"
+                        android:layout_marginEnd="32dp"
+                        android:layout_marginRight="32dp"
                         android:layout_marginBottom="16dp"
                         android:fontFamily="@font/timeburnernormal"
                         android:text="@string/similar_themes"
@@ -166,11 +166,11 @@
                         android:id="@+id/imageView6"
                         android:layout_width="50dp"
                         android:layout_height="55dp"
-                        android:layout_marginStart="152dp"
-                        android:layout_marginLeft="152dp"
+                        android:layout_marginStart="24dp"
+                        android:layout_marginLeft="24dp"
                         android:layout_marginTop="35dp"
-                        android:layout_marginEnd="152dp"
-                        android:layout_marginRight="152dp"
+                        android:layout_marginEnd="24dp"
+                        android:layout_marginRight="24dp"
                         android:layout_marginBottom="50dp"
                         android:onClick="openInvertedInferno"
                         android:scaleType="fitCenter"
@@ -184,10 +184,6 @@
                         android:id="@+id/textView15"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="50dp"
-                        android:layout_marginLeft="50dp"
-                        android:layout_marginEnd="50dp"
-                        android:layout_marginRight="50dp"
                         android:layout_marginBottom="15dp"
                         android:fontFamily="@font/timeburnernormal"
                         android:gravity="center"
@@ -202,10 +198,6 @@
                     <android.support.v7.widget.CardView
                         android:layout_width="0dp"
                         android:layout_height="2dp"
-                        android:layout_marginStart="25dp"
-                        android:layout_marginLeft="25dp"
-                        android:layout_marginEnd="25dp"
-                        android:layout_marginRight="25dp"
                         android:layout_marginBottom="7dp"
                         app:cardBackgroundColor="#6b6b6b"
                         app:cardCornerRadius="0dp"
