--- a/app/src/main/res/layout/fragment_phlox.xml
+++ b/app/src/main/res/layout/fragment_phlox.xml
@@ -192,7 +192,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/imageView6"
                         app:layout_constraintTop_toBottomOf="@+id/cardView6"
-                        app:srcCompat="@drawable/ic_square_saints" />
+                        app:srcCompat="@drawable/ic_lens_saints" />
 
                     <TextView
                         android:id="@+id/textView15"
