Circles instead of squares for theme icons that have only one color

--- a/app/src/main/res/layout/fragment_navigation_tgxthemes.xml
+++ b/app/src/main/res/layout/fragment_navigation_tgxthemes.xml
@@ -99,7 +99,7 @@
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
-                                app:srcCompat="@drawable/ic_square_inverted" />
+                                app:srcCompat="@drawable/ic_lens_inverted" />
 
                             <TextView
                                 android:id="@+id/textView48"
@@ -158,7 +158,7 @@
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
-                                app:srcCompat="@drawable/ic_square_jam" />
+                                app:srcCompat="@drawable/ic_lens_jam" />
 
                             <TextView
                                 android:id="@+id/textView47"
@@ -212,7 +212,7 @@
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
-                                app:srcCompat="@drawable/ic_square_teal" />
+                                app:srcCompat="@drawable/ic_lens_teal" />
 
                             <TextView
                                 android:id="@+id/textView10"
@@ -264,7 +264,7 @@
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
-                                app:srcCompat="@drawable/ic_square_pixel" />
+                                app:srcCompat="@drawable/ic_lens_pixel" />
 
                             <TextView
                                 android:id="@+id/textView9"
@@ -318,7 +318,7 @@
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
-                                app:srcCompat="@drawable/ic_square_inferno" />
+                                app:srcCompat="@drawable/ic_lens_inferno" />
 
                             <TextView
                                 android:id="@+id/textView8"
